<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context="com.example.user.secondhandtradingplatform.Register">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r_uname"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/uname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/username"
        android:id="@+id/uname"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/r_uname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd"
        android:id="@+id/pwd"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/r_pwd"
        android:layout_alignBottom="@+id/r_pwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r_pwd"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/r_uname"
        android:layout_alignLeft="@+id/r_uname"
        android:layout_alignStart="@+id/r_uname"
        android:password="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/email"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/r_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pwd"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r_email"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/r_pwd"
        android:layout_alignLeft="@+id/r_pwd"
        android:layout_alignStart="@+id/r_pwd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/location"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/r_location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="30dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r_location"
        android:layout_below="@+id/r_email"
        android:layout_alignLeft="@+id/r_email"
        android:layout_alignStart="@+id/r_email"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r_location"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:id="@+id/regBtn"
        android:clickable="true"
        android:elevation="8dp"/>
</RelativeLayout>
