<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_login"
    tools:context="com.example.user.secondhandtradingplatform.Login"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/input_uname"
        android:hint="@string/username"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/icons"
        android:singleLine="true"
        android:padding="10dp"
        android:layout_above="@+id/input_pwd"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/input_pwd"
        android:hint="@string/pwd"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/icons"
        android:singleLine="true"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/input_uname"
        android:layout_alignStart="@+id/input_uname" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:id="@+id/login_Button"
        android:background="@drawable/button_border"
        android:textColor="@color/icons"
        android:textSize="20sp"
        android:layout_below="@+id/input_pwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
