<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/gname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gadget_name"
                android:paddingTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/gprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gadget_price"
                android:paddingTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_warranty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/gwarranty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gadget_warranty"
                android:paddingTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/addCameraBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image"
                android:background="@mipmap/ic_add_photo" />

            <ImageButton
                android:id="@+id/addGalleryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image"
                android:layout_toRightOf="@+id/addCameraBtn"
                android:background="@mipmap/ic_collection" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border" />

            <ImageView
                android:id="@+id/imageToUpload"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="10dp" />
        </RelativeLayout>


        <EditText
            android:id="@+id/etUploadName"
            android:hint="photo name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Image" />


    </LinearLayout>


</ScrollView>